--- a/views/json.html
+++ b/views/json.html
@@ -21,7 +21,7 @@
 				//console.log(msg);
 				$.each(msg, function(i,item){
 					console.log(i,item)
-					$( "#users" ).html( "<p><span>Name: </span>"+item.name+"</p>" );
+					$( "#users" ).append( "<p><span>"+i+": </span>"+item.name+"</p>" );
 				});
 			});
 			 
